--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "bootstrap": "^5.3.8",
+    "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
